# backend/docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/auth/change-password": {
+        "/v1/auth/change-password": {
             "post": {
                 "security": [
                     {
@@ -61,7 +61,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/v1/auth/login": {
             "post": {
                 "description": "Authenticate user and return JWT token",
                 "consumes": [
@@ -107,7 +107,7 @@
                 }
             }
         },
-        "/auth/register": {
+        "/v1/auth/register": {
             "post": {
                 "description": "Register a new user (student or teacher)",
                 "consumes": [
